--- a/QuackApp.Editor.csproj
+++ b/QuackApp.Editor.csproj
@@ -124,9 +124,6 @@
     <Reference Include="UnityEditor.iOS.Extensions.Common">
       <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>Assets\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="Facebook.Unity">
       <HintPath>Assets\FacebookSDK\Plugins\Facebook.Unity.dll</HintPath>
     </Reference>
@@ -174,6 +171,9 @@
     </Reference>
     <Reference Include="Google.VersionHandlerImpl_v1.2.35.0">
       <HintPath>Assets\PlayServicesResolver\Editor\Google.VersionHandlerImpl_v1.2.35.0.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Assets\UnityPackages\JsonNet\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
